Bug 879299: Add visibility_monitor to Contacts app
This commit significantly refactors how contacts are loaded and rendered in
the DOM.  Placeholder items are initially added to the list and then later
filled in when visible.  Images are lazy loaded as before, but will now be
removed when the contact is no longer visible.  Search has also been
refactored to help encapsulate the contacts_list and importer_ui internals.

--- a/apps/communications/contacts/style/contacts.css
+++ b/apps/communications/contacts/style/contacts.css
@@ -586,3 +586,13 @@ section[role="region"] > header .icon.icon-settings
 #importSources > li.importService {
   height: auto;
 }
+
+#groups-container-box {
+  width: 100%;
+  overflow: hidden;
+}
+
+#groups-container {
+  height: 100%;
+  overflow: scroll;
+}
